<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    tools:context=".JoinActivity" >

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="130dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-6.5dp"
            android:includeFontPadding="false"
            android:text="@string/join_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_join_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:hint="@string/sample_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edit_join_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:hint="@string/sample_pw"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edit_join_password_check"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:hint="@string/sample_pw_chk"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <Button
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_green_blue_button"
                android:onClick="signUp"
                android:text="@string/join"
                android:textColor="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_join"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="goToTOU"
                android:text="@string/tou"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="goToPP"
                android:text="@string/pp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="70dp"
        android:text="@string/dal_shop"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>