<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".EditProfileActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/message_edit_profile_why"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_edit_profile_sex"
        style="@style/SimpleSettingsButton"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:onClick="pickSex"
        android:text="@string/sex"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_edit_profile_birth"
        style="@style/SimpleSettingsButton"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:onClick="pickBirthYear"
        android:text="@string/birth_year"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_edit_profile_job"
        style="@style/SimpleSettingsButton"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:onClick="pickJob"
        android:text="@string/job"
        android:textSize="20sp" />

    <TextView
        style="@style/SimpleSettingsButton"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/selector_green_blue"
        android:clickable="true"
        android:gravity="center"
        android:onClick="editProfile"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>