<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="130dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
			android:layout_marginBottom="-6.5dp"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:hint="@string/sample_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:hint="@string/sample_pw"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <Button
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/selector_green_blue_button"
                android:onClick="signIn"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/selector_green_blue_button"
                android:onClick="goToSignUp"
                android:text="@string/join"
                android:textColor="@color/white" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="130dp"
        android:text="@string/dal_shop"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>