<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.tankers.smile.activities.MenuActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/transparent_black"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:onClick="goToDalSearch"
                android:scaleType="centerCrop"
                android:src="@drawable/selector_reward_checkin_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rewards"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="showGuide"
                android:text="@string/question_mark"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/yellow"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/menu_my_dal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_transparent_grey_round" >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_dal_won" />

                <TextView
                    android:id="@+id/text_menu_dal"
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    android:gravity="center_vertical|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_transparent_light"
            android:clickable="true"
            android:onClick="goToDalstore"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:id="@+id/image_menu_dalstore"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/ic_menu_dalstore" />

            <TextView
                android:id="@+id/text_menu_dalstore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/menu_dalstore"
                android:textColor="@color/green_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/transparent_green_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_transparent_light"
            android:clickable="true"
            android:onClick="goToHistory"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:id="@+id/image_menu_history"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/ic_menu_history" />

            <TextView
                android:id="@+id/text_menu_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/menu_history"
                android:textColor="@color/green_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/transparent_green_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_transparent_light"
            android:clickable="true"
            android:onClick="goToAccount"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:id="@+id/image_menu_account"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/ic_menu_my_profile" />

            <TextView
                android:id="@+id/text_menu_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/menu_my_profile"
                android:textColor="@color/green_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/transparent_green_blue" />
    </LinearLayout>

</ScrollView>